--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -63,9 +63,20 @@
                         class="text-gray-600 hover:text-sky-600 hover:bg-sky-50 px-3 py-2 rounded-lg text-sm font-medium transition-colors">
                         โปรไฟล์ของฉัน
                     </a>
+                    
                     <a href="{% url 'report-create' %}"
                         class="text-gray-600 hover:text-sky-600 hover:bg-sky-50 px-3 py-2 rounded-lg text-sm font-medium transition-colors">
                         แจ้งปัญหา
+                    </a>
+                    <a href="{% url 'notification-list' %}" class="relative p-2 text-gray-600 hover:text-sky-600 transition-colors mr-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
+                        </svg>
+                        {% if noti_count > 0 %}
+                        <span class="absolute top-1 right-1 inline-flex items-center justify-center px-2 py-1 text-xs font-bold leading-none text-white transform translate-x-1/4 -translate-y-1/4 bg-red-500 rounded-full">
+                            {{ noti_count }}
+                        </span>
+                        {% endif %}
                     </a>
                     {% if user.is_superuser %}
                     <div class="relative group z-50">
